src/style.css
/* 
======================
# IMPORTS 
======================
*/

/* Tailwind import */
@import 'tailwindcss';
/* Font import (Montserrat & Special Gothic Expanded One) */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Special+Gothic+Expanded+One&display=swap');


/* 
======================
# CSS CUSTOM PROPERTIES 
======================
*/
@theme {
    /* Typography */
    --font-heading: "Special Gothic Expanded One", sans-serif;          /* For headings (Album name, buttons, Stream/Track, etc) */
    --font-body: "Montserrat", sans-serif;                              /* For general body font */
    /* Colors */
    --color-accent: #679E85;                                            /* [Green] accent color for buttons */
    --color-primary: #fdfdfd;                                           /* [White-ish] for text and icons */
    --color-secondary: #383838;                                         /* [Grey] for News (?) */
    --color-background: #000;                                           /* [Black] for background */
}


/* 
======================
# SHARED CLASSES
======================
*/

/* Base */
body {
    @apply
        overflow-x-hidden
        min-h-screen box-border
        m-0 p-0
        font-heading text-base leading-normal text-primary
}

/* Images & Icons */
.logo {
    @apply
        w-12 p-1.5
        bg-background
}
.social-icon {
    @apply
        w-4.5
}
.menu-icon {
    @apply
        w-9
}

/* Top navigation */
.topnav {
    @apply
        fixed
        flex justify-between items-center
        w-full pl-4.5 pr-3 py-2.5
        bg-background/35 backdrop-blur-sm
}

